--- a/index.html
+++ b/index.html
@@ -52,4 +52,27 @@
         </div>
         <a href="#" class="btn">View All</a>
     </section>
-    
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo">Kids Education</div>
+            <div class="footer-links">
+                <h4>About School</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admission</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Keep in Touch</h4>
+                <ul>
+                    <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
