added work sans google font

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/kids.css">
 </head>
-<body>
+<body class="work-sanse-font">
     <header>
         <div class="SCHOOL">SCHOOL
            
@@ -30,25 +30,25 @@
             <a href="#" class="btn">Enroll Now</a>
         </div>
         <div class="hero-image">
-            <img src="hero-image.jpg" alt="Student with cape">
+            <img src="assets/hero-kids.png" alt="Student with cape">
         </div>
     </section>
     <section class="curriculum">
         <h2>Standard Curriculum</h2>
         <div class="cards">
-            <div class="card">Kinder (3-6 Years)</div>
-            <div class="card">Elementary School</div>
-            <div class="card">Middle (6-10 Years)</div>
+            <img src="assets/kinder.png"  alt="card"><p>Kinder (3-6 Years)</p>
+            <img src="assets/elementary.png"  alt="card"><p>Elementary School</p>
+            <img src="assets/middle.png"  alt="card"><p>Middle (6-10 Years)</p>
         </div>
     </section>
     <section class="stories">
         <h2>Our Stories</h2>
         <div class="story-list">
-            <div class="story"><img src="story1.jpg" alt="Toddler Coloring"><p>A fun toddler coloring training on classroom</p></div>
-            <div class="story"><img src="story2.jpg" alt="Nature Learning"><p>Field and nature skill learning journey</p></div>
-            <div class="story"><img src="story3.jpg" alt="Summer Camp"><p>Summer camp with fun learning activities</p></div>
-            <div class="story"><img src="story4.jpg" alt="Competition"><p>Creative competition for student projects</p></div>
-            <div class="story"><img src="story5.jpg" alt="Co-curricular"><p>Co-curricular activities enhancing learning</p></div>
+            <img src="assets/story-1.png" alt="Toddler Coloring"><p>A fun toddler coloring training on classroom</p>
+            <img src="assets/story-2.png" alt="Nature Learning"><p>Field and nature skill learning journey</p>
+            <img src="assets/story-3.png" alt="Summer Camp"><p>Summer camp with fun learning activities</p>
+            <img src="assets/story-4.png" alt="Competition"><p>Creative competition for student projects</p>
+            <img src="assets/story-5.png" alt="Co-curricular"><p>Co-curricular activities enhancing learning</p>
         </div>
         <a href="#" class="btn">View All</a>
     </section>
@@ -67,12 +67,16 @@
             <div class="footer-social">
                 <h4>Keep in Touch</h4>
                 <ul>
-                    <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-                    <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
-                    <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="assets/fb.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="assets/dribble.png" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="assets/twitter.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="assets/google+.png" alt="Twitter"></a></li>
                 </ul>
             </div>
         </div>
     </footer>
 </body>
 </html>
+
+
+
